--- a/index.html
+++ b/index.html
@@ -9,8 +9,10 @@
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css">
 
-</head>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+    <script src="script.js"></script>
 
+</head>
 
 <body>
 <div class="container">
@@ -19,8 +21,8 @@
 
 <table class="tb">
     <colgroup>
-        <col style="width: 15%">
-        <col style="width: 10%">
+        <col style="width: 18%">
+        <col style="width: 12%">
         <col style="width: 70%">
     </colgroup>
     <thead>
@@ -31,10 +33,30 @@
         </tr>
     </thead>
     <tbody>
-        <tr>
+        <tr class="sametab" data-href="2020-11-27-ecrm20/ecrm20_index.html">
             <td>27-11-2020</td>
-            <td><a href="2020_11_27_ecrm20/index.html"><i class="fab fa-js-square"></i></a></td>
-            <td>Early Career Reseearchers meeting</td>
+            <td><i class="fas fa-file-alt"></i></td>
+            <td>Early-Career Researchers Meeting 2020</td>
+        </tr>
+        <tr class="sametab" data-href="2020-06-12-TOPday/topday_index.html">
+            <td>12-06-2020</td>
+            <td><i class="fas fa-file-alt"></i></td>
+            <td>Annual TOP Day 2020</td>
+        </tr>
+        <tr class="sametab" data-href="2020-05-15-SynergyMeeting/synergymeeting_index.html">
+            <td>15-05-2020</td>
+            <td><i class="fas fa-file-alt"></i></td>
+            <td>Synergy Meeting</td>
+        </tr>
+        <tr class="sametab" data-href="2019-12-11-ImagingGeneticsMeeting/igmeeting_index.html">
+            <td>11-12-2019</td>
+            <td><i class="fas fa-file-alt"></i></td>
+            <td>Imaging Genetics meeting</td>
+        </tr>
+        <tr class="sametab" data-href="2019-05-06-PhD_plan/190506 PhD plan presentation.pptx">
+            <td>06-05-2019</td>
+            <td><i class="fas fa-file-powerpoint"></i></td>
+            <td>PhD plan presentation in Imaging meeting</td>
         </tr>
     </tbody>
 </table>
