--- a/2020-11-27-ecrm20/ecrm20_index.html
+++ b/2020-11-27-ecrm20/ecrm20_index.html
@@ -44,7 +44,7 @@
             <td><i class="fab fa-html5"></i></td>
             <td>Slide to display during the breaks</td>
         </tr>
-        <tr class="newtab" data-href="zoom_background.jpg">
+        <tr class="newtab" data-href="Zoom_background.jpg">
             <td><i class="far fa-image"></i></td>
             <td>BONUS: Zoom background</td>
         </tr>
