add ggplot tutorial

--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@
 <table class="tb">
     <colgroup>
         <col style="width: 18%">
-        <col style="width: 12%">
-        <col style="width: 70%">
+        <col style="width: 15%">
+        <col style="width: 65%">
     </colgroup>
     <thead>
         <tr>
@@ -35,22 +35,44 @@
     <tbody>
         <tr class="sametab" data-href="2020-11-27-ecrm20/ecrm20_index.html">
             <td>27-11-2020</td>
-            <td><i class="fas fa-file-alt"></i></td>
+            <td>
+                <i class="fab fa-js-square"></i>
+                <i class="fab fa-html5"></i>
+            </td>
             <td>Early-Career Researchers Meeting 2020</td>
         </tr>
         <tr class="sametab" data-href="2020-06-12-TOPday/topday_index.html">
             <td>12-06-2020</td>
-            <td><i class="fas fa-file-alt"></i></td>
+            <td>
+                <i class="fab fa-apple"></i>
+                <i class="far fa-file-pdf"></i>
+            </td>
             <td>Annual TOP Day 2020</td>
         </tr>
         <tr class="sametab" data-href="2020-05-15-SynergyMeeting/synergymeeting_index.html">
             <td>15-05-2020</td>
-            <td><i class="fas fa-file-alt"></i></td>
+            <td>
+                <i class="fab fa-apple"></i>
+                <i class="far fa-file-pdf"></i>
+                <i class="far fa-file-powerpoint"></i>
+            </td>
             <td>Synergy Meeting</td>
+        </tr>
+        <tr class="sametab" data-href="2020-02-07-ggplot_workshop/ggplotworkshop_index.html">
+            <td>07-02-2020</td>
+            <td>
+                <i class="fab fa-html5"></i>
+                <i class="far fa-file-pdf"></i>
+                <i class="fab fa-r-project"></i>
+            </td>
+            <td>ggplot workshop in the Research Meeting</td>
         </tr>
         <tr class="sametab" data-href="2019-12-11-ImagingGeneticsMeeting/igmeeting_index.html">
             <td>11-12-2019</td>
-            <td><i class="fas fa-file-alt"></i></td>
+            <td>
+                <i class="fab fa-apple"></i>
+                <i class="far fa-file-pdf"></i>
+            </td>
             <td>Imaging Genetics meeting</td>
         </tr>
         <tr class="sametab" data-href="2019-05-06-PhD_plan/190506 PhD plan presentation.pptx">
