--- a/2020-11-27-ecrm20/ecrm20_index.html
+++ b/2020-11-27-ecrm20/ecrm20_index.html
@@ -44,6 +44,10 @@
             <td><i class="fab fa-html5"></i></td>
             <td>Slide to display during the breaks</td>
         </tr>
+        <tr class="newtab" data-href="closing_slides/index.html">
+            <td><i class="fab fa-js-square"></i></td>
+            <td>Slides for the thanks and closing</td>
+        </tr>
         <tr class="newtab" data-href="Zoom_background.jpg">
             <td><i class="far fa-image"></i></td>
             <td>BONUS: Zoom background</td>
