--- a/2020-02-07-ggplot_workshop/ggplotworkshop_index.html
+++ b/2020-02-07-ggplot_workshop/ggplotworkshop_index.html
@@ -40,9 +40,9 @@
             <td><i class="far fa-file-pdf"></i></td>
             <td>PDF of the same slides</td>
         </tr>
-        <tr class="sametab" data-href="presentation.Rmd">
+        <tr class="newtab" data-href="https://github.com/danielroelfs/slides/tree/main/2020-02-07-ggplot_workshop">
             <td><i class="fab fa-r-project"></i></td>
-            <td>Rmarkdown file to generate the presentation</td>
+            <td>R Markdown files to generate the presentation</td>
         </tr>
     </tbody>
 </table>
