--- a/2020-11-27-ecrm20/break_slide/break_slide.html
+++ b/2020-11-27-ecrm20/break_slide/break_slide.html
@@ -44,9 +44,12 @@
 
         <div>the next talk is:</div>
 
-        <div id="talk">"psychological constructs as a challenge"</div>
+        <div id="talk">"reproducibility in bioinformatics: monitoring your analysis"</div>
         <div id="speaker">by aashish srivastava at</div>
         <div id="time">12:15</div>
+        <!--<div id="talk">"be sensitive about sensitivity"</div>
+        <div id="speaker">by thomas bjella at</div>
+        <div id="time">13:50</div>-->
 
         <div id="now">
             the current time is:
