--- a/2020-11-27-ecrm20/break_slide/break_slide.html
+++ b/2020-11-27-ecrm20/break_slide/break_slide.html
@@ -43,13 +43,18 @@
         <h1>We're on a break...</h1>
 
         <div>the next talk is:</div>
+        <!--<div>the next event is the</div>-->
 
-        <div id="talk">"reproducibility in bioinformatics: monitoring your analysis"</div>
+        <!--<div id="talk">"reproducibility in bioinformatics: monitoring your analysis"</div>
         <div id="speaker">by aashish srivastava at</div>
-        <div id="time">12:15</div>
+        <div id="time">12:15</div>-->
         <!--<div id="talk">"be sensitive about sensitivity"</div>
         <div id="speaker">by thomas bjella at</div>
         <div id="time">13:50</div>-->
+        <div id="talk" style="font-style: normal;color: #E896C1;">JAMES HEATHERS</div>
+        <div id="speaker">at</div>
+        <div id="time">16:00</div>
+
 
         <div id="now">
             the current time is:
