add page for single files

--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
             </td>
             <td>Imaging Genetics meeting</td>
         </tr>
-        <tr class="sametab" data-href="2019-05-06-PhD_plan/190506 PhD plan presentation.pptx">
+        <tr class="sametab" data-href="2019-05-06-PhD_plan/phdplan_index.html">
             <td>06-05-2019</td>
             <td><i class="fas fa-file-powerpoint"></i></td>
             <td>PhD plan presentation in Imaging meeting</td>
