--- a/2019-05-06-PhD_plan/phdplan_index.html
+++ b/2019-05-06-PhD_plan/phdplan_index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8">
     
-    <title>Imaging Genetics Meeting 11/12/2020</title>
+    <title>Imaging Meeting 6/5/2019</title>
     
     <link rel="stylesheet" href="../style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css">
@@ -18,7 +18,7 @@
 <body>
 <div class="container">
 
-<h1>Imaging Genetics Meeting 11/12/2020</h1>
+<h1>Imaging Meeting 6/5/2019</h1>
 
 <table class="tb">
     <colgroup>
@@ -32,13 +32,9 @@
         </tr>
     </thead>
     <tbody>
-        <tr class="sametab" data-href="191211_Imaging_Genetics.key">
-            <td><i class="fab fa-apple"></i></td>
-            <td>Keynote presentation</td>
-        </tr>
-        <tr class="newtab" data-href="191211_Imaging_Genetics_1200.pdf">
-            <td><i class="far fa-file-pdf"></i></td>
-            <td>PDF of the slides</td>
+        <tr class="sametab" data-href="190506_PhD_plan_presentation.pptx">
+            <td><i class="far fa-file-powerpoint"></i></td>
+            <td>Powerpoint presentation</td>
         </tr>
     </tbody>
 </table>
