add slides for midterm

--- a/index.html
+++ b/index.html
@@ -33,6 +33,13 @@
         </tr>
     </thead>
     <tbody>
+        <tr class="sametab" data-href="2021-02-01-midterm-evaluation/midterm_index.html">
+            <td>01-02-2021</td>
+            <td>
+                <i class="fab fa-js-square"></i>
+            </td>
+            <td>PhD Mid-Term Evaluation</td>
+        </tr>
         <tr class="sametab" data-href="2020-11-27-ecrm20/ecrm20_index.html">
             <td>27-11-2020</td>
             <td>
