update mid-term slides

--- a/2021-02-01-midterm-evaluation/introduction_slides/index.html
+++ b/2021-02-01-midterm-evaluation/introduction_slides/index.html
@@ -25,17 +25,23 @@
 				<!-- START SLIDES -->
 				
 				<!-- SLIDE -->
-				<section class="center">
-					<h1 style="padding-bottom: 0.5em;">PhD Mid-Term Evaluation</h1>
-					from<br>
-					<h3 style="padding-top: 1em;padding-bottom: 2em;">Daniel Roelfs</h3>
+				<section class="center" data-background-video="https://vod-progressive.akamaized.net/exp=1612282941~acl=%2Fvimeo-prod-skyfire-std-us%2F01%2F1152%2F16%2F405761422%2F1737661678.mp4~hmac=3a8af5638f2dcf4822cbc6952b46e13d5f358babfaa136b6646d986649ba9142/vimeo-prod-skyfire-std-us/01/1152/16/405761422/1737661678.mp4" 
+				data-background-video-loop data-background-video-muted>
 
-					<h4 style="color: var(--secondary-accent);font-size: 16pt;">Supervisors: Tobias Kaufmann, Dag Alnæs, Ole Andreassen</h4>
-					<h4 style="color: var(--secondary-accent);font-size: 16pt;">Committee: Ida Elken Sønderby, Ann-Marie de Lange</h4>
+					<div class="glass">
 
-					<!--<div style="text-align: center; margin-top: 20%; margin-left: -5%;"> 
-						<img style="margin: auto" src="https://norment.github.io/ecrm20_escaperoom/images/norment.png" width="50"/>
-					</div>-->
+						<h1 style="padding-bottom: 0.5em;font-size: 40pt;">PhD Mid-Term Evaluation</h1>
+						from<br>
+						<h3 style="padding-top: 1em;padding-bottom: 2em;font-size: 28pt;">Daniel Roelfs</h3>
+
+						<h4 style="color: var(--secondary-accent);font-size: 16pt;">Supervisors: Tobias Kaufmann, Dag Alnæs, Ole Andreassen</h4>
+						<h4 style="color: var(--secondary-accent);font-size: 16pt;">Committee: Ida Elken Sønderby, Ann-Marie de Lange</h4>
+
+						<!--<div style="text-align: center; margin-top: 20%; margin-left: -5%;"> 
+							<img style="margin: auto" src="https://norment.github.io/ecrm20_escaperoom/images/norment.png" width="50"/>
+						</div>-->
+
+					</div>
 
 				</section>
 
@@ -55,9 +61,9 @@
 				</section>
 
 				<!-- SLIDE -->
-				<section class="center">
+				<section>
 
-					<h2>Article 1</h2>
+					<h2 class="vertical">Article 1</h2>
 
 					<!-- SUBSLIDE -->
 					<section>
@@ -77,9 +83,9 @@
 				</section>
 
 				<!-- SLIDE -->
-				<section class="center">
+				<section>
 
-					<h2>Article 2</h2>
+					<h2 class="vertical">Article 2</h2>
 
 					<!-- SUBSLIDE -->
 					<section>
@@ -128,7 +134,7 @@
 
 						<div class="italic">"Phenotypically independent profiles relevant to mental health are genetically correlated"</div>
 						<div>Submitted:<div style="padding-right: 1em;display: inline;"></div><i class="fas fa-check" style="color: green;"></i></div>
-						<div>Published:<div style="padding-right: 1em;display: inline;"></div><i class="fas fa-times" style="color: red;"></i></div>
+						<div>Published:<div style="padding-right: 1em;display: inline;"></div><i class="fas fa-check" style="color: green;"></i>&nbsp;&nbsp;(accepted)</div>
 						<br>
 						<div>Status:<div style="padding-right: 1em;display: inline;"></div><div class="italic inline">Pending editorial review</div></div>
 					
