--- a/2021-02-01-midterm-evaluation/midterm_index.html
+++ b/2021-02-01-midterm-evaluation/midterm_index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8">
     
-    <title>Early-Career Researchers Meeting 2020</title>
+    <title>PhD Mid-Term Evaluation</title>
     
     <link rel="stylesheet" href="../style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css">
@@ -18,7 +18,7 @@
 <body>
 <div class="container">
 
-<h1>Early-Career Researchers Meeting 2020</h1>
+<h1>PhD Mid-Term Evaluation</h1>
 
 <table class="tb">
     <colgroup>
