--- a/2021-02-01-midterm-evaluation/introduction_slides/index.html
+++ b/2021-02-01-midterm-evaluation/introduction_slides/index.html
@@ -25,7 +25,7 @@
 				<!-- START SLIDES -->
 				
 				<!-- SLIDE -->
-				<section class="center" data-background-video="https://vod-progressive.akamaized.net/exp=1612282941~acl=%2Fvimeo-prod-skyfire-std-us%2F01%2F1152%2F16%2F405761422%2F1737661678.mp4~hmac=3a8af5638f2dcf4822cbc6952b46e13d5f358babfaa136b6646d986649ba9142/vimeo-prod-skyfire-std-us/01/1152/16/405761422/1737661678.mp4" 
+				<section class="center" data-background-video="files/background_video.mp4" 
 				data-background-video-loop data-background-video-muted>
 
 					<div class="glass">
