change committee to alphabetical

--- a/2021-02-01-midterm-evaluation/introduction_slides/index.html
+++ b/2021-02-01-midterm-evaluation/introduction_slides/index.html
@@ -34,8 +34,8 @@
 						from<br>
 						<h3 style="padding-top: 1em;padding-bottom: 2em;font-size: 28pt;">Daniel Roelfs</h3>
 
+						<h4 style="color: var(--secondary-accent);font-size: 16pt;">Committee: Ann-Marie de Lange, Ida Elken Sønderby</h4>
 						<h4 style="color: var(--secondary-accent);font-size: 16pt;">Supervisors: Tobias Kaufmann, Dag Alnæs, Ole Andreassen</h4>
-						<h4 style="color: var(--secondary-accent);font-size: 16pt;">Committee: Ida Elken Sønderby, Ann-Marie de Lange</h4>
 
 						<!--<div style="text-align: center; margin-top: 20%; margin-left: -5%;"> 
 							<img style="margin: auto" src="https://norment.github.io/ecrm20_escaperoom/images/norment.png" width="50"/>
@@ -66,18 +66,18 @@
 					<h2 class="vertical">Article 1</h2>
 
 					<!-- SUBSLIDE -->
-					<section>
-						<img class="center nohighlight" src="files/ExtractUKBQuestions.png" style="margin-top: -2em;"/>
+					<section class="center">
+						<img class="nohighlight" src="files/ExtractUKBQuestions.png" style="margin-top: -2em;"/>
 					</section>
 
 					<!-- SUBSLIDE -->
-					<section>
-						<img class="center nohighlight" src="files/RunICA.png" style="margin-top: -4em;"/>
+					<section class="center">
+						<img class="nohighlight" src="files/RunICA.png" style="margin-top: -4em;"/>
 					</section>
 
 					<!-- SUBSLIDE -->
-					<section>
-						<img class="center nohighlight" src="files/RunGWASandLDSC.png" style="margin-top: -2em;"/>
+					<section class="center">
+						<img class="nohighlight" src="files/RunGWASandLDSC.png" style="margin-top: -2em;"/>
 					</section>
 
 				</section>
@@ -88,18 +88,18 @@
 					<h2 class="vertical">Article 2</h2>
 
 					<!-- SUBSLIDE -->
-					<section>
-						<img class="center nohighlight" src="files/methods_ukb.png" style="margin-top: -2em;"/>
+					<section class="center">
+						<img class="nohighlight" src="files/methods_ukb.png" style="margin-top: -2em;"/>
 					</section>
 
 					<!-- SUBSLIDE -->
-					<section>
-						<img class="center nohighlight" src="files/gwas.png" style="margin-top: -2em;"/>
+					<section class="center">
+						<img class="nohighlight" src="files/gwas.png" style="margin-top: -2em;"/>
 					</section>
 
 					<!-- SUBSLIDE -->
-					<section>
-						<img class="center nohighlight" src="files/ldsc.png" style="margin-top: -2em;"/>
+					<section class="center">
+						<img class="nohighlight" src="files/ldsc.png" style="margin-top: -2em;"/>
 					</section>
 
 				</section>
@@ -134,7 +134,7 @@
 
 						<div class="italic">"Phenotypically independent profiles relevant to mental health are genetically correlated"</div>
 						<div>Submitted:<div style="padding-right: 1em;display: inline;"></div><i class="fas fa-check" style="color: green;"></i></div>
-						<div>Published:<div style="padding-right: 1em;display: inline;"></div><i class="fas fa-check" style="color: green;"></i>&nbsp;&nbsp;(accepted)</div>
+						<div>Accepted:<div style="padding-right: 1em;display: inline;"></div><i class="fas fa-check" style="color: green;"></i></div>
 						<br>
 						<div>Status:<div style="padding-right: 1em;display: inline;"></div><div class="italic inline">Pending editorial review</div></div>
 					
@@ -155,8 +155,8 @@
 						</div>
 
 						<div class="italic">"Genetic overlap between mental health and brain connectivity" [working title]</div>
-						<div>Submitted:<div style="padding-right: 1em;display: inline;"></div><i class="fas fa-times" style="color: red;"></i>&nbsp;&nbsp;(expected February 2021)</div>
-						<div>Published:<div style="padding-right: 1em;display: inline;"></div><i class="fas fa-times" style="color: red;"></i></div>
+						<div>Submitted:<div style="padding-right: 1em;display: inline;"></div><i class="fas fa-times" style="color: red;"></i>&nbsp;&nbsp;(expected March 2021)</div>
+						<div>Accepted:<div style="padding-right: 1em;display: inline;"></div><i class="fas fa-times" style="color: red;"></i></div>
 						<br>
 						<div>Status:<div style="padding-right: 1em;display: inline;"></div><div class="italic inline">Finalizing manuscript for preprinting</div></div>
 					
@@ -178,7 +178,7 @@
 
 						<div class="italic">TBD</div>
 						<div>Submitted:<div style="padding-right: 1em;display: inline;"></div><i class="fas fa-times" style="color: red;"></i>&nbsp;&nbsp;(expected summer 2021)</div>
-						<div>Published:<div style="padding-right: 1em;display: inline;"></div><i class="fas fa-times" style="color: red;"></i></div>
+						<div>Accepted:<div style="padding-right: 1em;display: inline;"></div><i class="fas fa-times" style="color: red;"></i></div>
 						<br>
 						<div>Status:<div style="padding-right: 1em;display: inline;"></div><div class="italic inline">Planning stage</div></div>
 
