add program to ecrm folder

--- a/2020-11-27-ecrm20/ecrm20_index.html
+++ b/2020-11-27-ecrm20/ecrm20_index.html
@@ -48,6 +48,10 @@
             <td><i class="fab fa-js-square"></i></td>
             <td>Slides for the thanks and closing</td>
         </tr>
+        <tr class="newtab" data-href="program/index.html">
+            <td><i class="fab fa-html5"></i></td>
+            <td>Online version of the program</td>
+        </tr>
         <tr class="newtab" data-href="Zoom_background.jpg">
             <td><i class="far fa-image"></i></td>
             <td>BONUS: Zoom background</td>
