add synschiz slides

--- a/index.html
+++ b/index.html
@@ -40,6 +40,13 @@
             </td>
             <td>PhD Mid-Term Evaluation</td>
         </tr>
+        <tr class="sametab" data-href="2021-02-25-synschiz-meeting/synschiz_meeting_index.html">
+            <td>25-02-2021</td>
+            <td>
+                <i class="fab fa-js-square"></i>
+            </td>
+            <td>SYNSCHIZ Meeting</td>
+        </tr>
         <tr class="sametab" data-href="2020-11-27-ecrm20/ecrm20_index.html">
             <td>27-11-2020</td>
             <td>
