update closing slide

--- a/2021-02-25-synschiz-meeting/presentation_slides/index.html
+++ b/2021-02-25-synschiz-meeting/presentation_slides/index.html
@@ -88,7 +88,7 @@
 				<section class="center" data-background-video="files/background_video.mp4" 
 				data-background-video-loop data-background-video-muted>
 
-					<div class="glass" style="width: 50%;margin: 0 auto;">
+					<div class="glass" style="width: 50%;margin: auto;margin-top: -2em;">
 						<h2>Thank you!</h2>
 
 						<img src="files/ERA_NET_NEURON_logo_white.png" style="height: 80px;padding-top: 1em;"/>
