fix figure color

--- a/2021-02-25-synschiz-meeting/presentation_slides/index.html
+++ b/2021-02-25-synschiz-meeting/presentation_slides/index.html
@@ -4,7 +4,7 @@
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
 
-		<title>SYNSCHIZ Update Presentation</title>
+		<title>SYNSCHIZ Meeting Presentation</title>
 
 		<link rel="stylesheet" href="css/reset.css">
 		<link rel="stylesheet" href="css/reveal.css">
@@ -31,7 +31,7 @@
 
 						<h1 style="padding-top: 1em;padding-bottom: 0.5em;font-size: 40pt;">Genetic overlap between mental health profiles and psychiatric disorders</h1>
 						<h3 style="font-size: 28pt;">Daniel Roelfs & Tobias Kaufmann</h3>
-						<h3 style="padding-bottom: 0em;font-size: 18pt;">NORMENT, University of Oslo</h3>
+						<h4 style="padding-bottom: 0em;font-size: 18pt;">NORMENT, University of Oslo</h4>
 						<img src="files/norment.png" style="height: 35px;"/>
 
 
