final update midterm slides

--- a/2021-03-01-midterm-evaluation/introduction_slides/index.html
+++ b/2021-03-01-midterm-evaluation/introduction_slides/index.html
@@ -347,22 +347,22 @@
 							</tr>
 							<tr>
 								<td></td>
-								<td>PLINK 2.0</img></td>
+								<td>PLINK</td>
 								<td><img src="https://upload.wikimedia.org/wikipedia/commons/thumb/1/18/ISO_C%2B%2B_Logo.svg/1200px-ISO_C%2B%2B_Logo.svg.png" height=50></img></td>
 							</tr>
 							<tr>
 								<td></td>
-								<td>LDSC</img></td>
+								<td>LDSC</td>
 								<td><img src="https://raw.githubusercontent.com/github/explore/master/topics/python/python.png" height=50></img></td>
 							</tr>
 							<tr>
 								<td></td>
-								<td>pleioFDR</img></td>
+								<td>pleioFDR</td>
 								<td><img src="https://upload.wikimedia.org/wikipedia/commons/thumb/2/21/Matlab_Logo.png/267px-Matlab_Logo.png" height=50></img></td>
 							</tr>
 							<tr>
 								<td></td>
-								<td>MOSTest</img></td>
+								<td>MOSTest</td>
 								<td><img src="https://upload.wikimedia.org/wikipedia/commons/thumb/2/21/Matlab_Logo.png/267px-Matlab_Logo.png" height=50></img></td>
 							</tr>
 							<!--<tr>
