update nrsn slides

--- a/2021-06-28-nrsn-phd-day/nrsn-phd-day-introduction/index.html
+++ b/2021-06-28-nrsn-phd-day/nrsn-phd-day-introduction/index.html
@@ -73,16 +73,24 @@
 
 						<table>
 							<tr>
-								<td class="it small">15.00 - 15.15</td>
+								<td class="it small">15.00 - 15.05</td>
 								<td>Welcome and Introduction</td>
 							</tr>
 							<tr>
-								<td class="it small">15.15 - 16.30</td>
+								<td class="it small">15.05 - 16.30</td>
 								<td>Simon Clark + Q&A</td>
 							</tr>
 							<tr>
-								<td class="it small">17.00 - 17.30</td>
+								<td class="it small">16.30 - 16.50</td>
+								<td class="it">Coffee break</td>
+							</tr>
+							<tr>
+								<td class="it small">16.50 - 17.30</td>
 								<td>Quiz</td>
+							</tr>
+							<tr>
+								<td class="it small">17.30 - 18.00</td>
+								<td>Closing & thanks</td>
 							</tr>
 							<tr>
 								<td class="it small">18.00 -</td>
