add nrsn break slide

--- a/2021-06-28-nrsn-phd-day/nrsn-phd-day_index.html
+++ b/2021-06-28-nrsn-phd-day/nrsn-phd-day_index.html
@@ -36,6 +36,10 @@
             <td><i class="fab fa-js-square"></i></td>
             <td>Slides for the introduction</td>
         </tr>
+        <tr class="newtab" data-href="break_slide/break_slide.html">
+            <td><i class="fab fa-html5"></i></td>
+            <td>Slide to display during the breakstd>
+        </tr>
     </tbody>
 </table>
 
