--- a/2021-06-28-nrsn-phd-day/nrsn-phd-day_index.html
+++ b/2021-06-28-nrsn-phd-day/nrsn-phd-day_index.html
@@ -38,7 +38,7 @@
         </tr>
         <tr class="newtab" data-href="break_slide/break_slide.html">
             <td><i class="fab fa-html5"></i></td>
-            <td>Slide to display during the breakstd>
+            <td>Slide to display during the breaks<td>
         </tr>
     </tbody>
 </table>
