--- a/2021-06-30-nrsn-symposium/nrsn-symposium-slides/index.html
+++ b/2021-06-30-nrsn-symposium/nrsn-symposium-slides/index.html
@@ -517,16 +517,69 @@
 				</section>
 
 				<!-- SLIDE -->
+				<section data-visibility="hidden">
+					<div class="grid-wrapper">
+						<div class="header">
+							<div class="logo"></div>
+							<div class="section">Acknowledgements</div>
+						</div>
+
+						<div class="content">
+							<table class="acknowledgements">
+								<tr>
+									<th colspan="2">Data</th>
+								</tr>
+								<tr>
+									<td><img src="files/ukb_logo.svg" style="width: 20vmax;"></td>
+								</tr>
+							</table>
+
+							<table class="acknowledgements">
+								<tr><th colspan="2">Infrastructure</th></tr>
+								<tr>
+									<td><img src="files/tsd_logo.png" style="width: 6vmax;"></td>
+									<td>Services for Sensitive Data</td>
+								</tr>
+								<tr>
+									<td><img src="files/sigma2_logo.png" style="width: 20vmax;"></td>
+									<td>National Infrastructure for High Performance Computing and Data Storage in Norway</td>
+								</tr>
+							</table>
+
+							<table class="acknowledgements">
+								<tr><th colspan="2">Funding</th></tr>
+								<tr>
+									<td style="font-style: italic;">ERA-NET<br><img src="files/ERA_NET_NEURON_logo.png" style="width: 20vmax;"></td>
+									<td style="font-style: italic;"><img src="files/NFR_logo.svg" style="min-height: 7vmin;"></td>
+								</tr>
+							</table>
+
+						</div>
+
+					</div>
+				</section>
+
+				<!-- SLIDE -->
 				<section class="end color--green" data-state="hide-controls">
 					<div class="logo-wrapper">
 						<div class="logo"></div>
 
 						<div>
-							<div class="coll_logo"><img src="lib/norment/other/UiO_white.svg"></div>
-							<div class="coll_logo" style="width: 15%;"><img src="lib/norment/other/OUS_logo_HVIT_eng.png"></div>
-							<div class="coll_logo"><img src="lib/norment/other/UiBlogo_Eng_white_left.svg"></div>
-							<div class="coll_logo"><img src="lib/norment/other/Haukeland_white.svg"></div>
-							<div class="coll_logo" style="width: 10%;"><img src="lib/norment/other/CoE_white.png"></div>
+							<div class="col_logo"><img src="lib/norment/other/UiO_white.svg"></div>
+							<div class="col_logo" style="width: 15%;"><img src="lib/norment/other/OUS_logo_HVIT_eng.png"></div>
+							<div class="col_logo"><img src="lib/norment/other/UiBlogo_Eng_white_left.svg"></div>
+							<div class="col_logo"><img src="lib/norment/other/Haukeland_white.svg"></div>
+							<div class="col_logo" style="width: 10%;"><img src="lib/norment/other/CoE_white.png"></div>
+						</div>
+
+						<div style="margin-top: 1em;font-style: italic;">Thanks to</div>
+						<div class="ackn" style="border: solid;border-radius: 50px;border-spacing: 0;width: 80%;margin: auto;">
+							<div class="col_logo"><img src="files/ukb_logo.svg"></div>
+							<div class="col_logo"><img style="height: 10vmin;" src="files/tsd_logo.png">
+								<img src="files/sigma2_logo.png">
+							</div>
+							<div class="col_logo"><em>ERA-NET</em><img src="files/ERA_NET_NEURON_logo.png"></div>
+							<div class="col_logo"><img src="files/NFR_logo.svg"></div>
 						</div>
 					</div>
 
