fix closing slide

--- a/2021-06-30-nrsn-symposium/nrsn-symposium-slides/index.html
+++ b/2021-06-30-nrsn-symposium/nrsn-symposium-slides/index.html
@@ -562,7 +562,7 @@
 				<!-- SLIDE -->
 				<section class="end color--green" data-state="hide-controls">
 					<div class="logo-wrapper">
-						<div class="logo"></div>
+						<div class="logo" style="margin-top: 25vmin;"></div>
 
 						<div>
 							<div class="col_logo"><img src="lib/norment/other/UiO_white.svg"></div>
