final fixes nrsn symposium

--- a/2021-06-30-nrsn-symposium/nrsn-symposium-slides/index.html
+++ b/2021-06-30-nrsn-symposium/nrsn-symposium-slides/index.html
@@ -53,7 +53,7 @@
 						<div class="content vcenter">
 							<ul class="no-bullets">
 								<li>Psychiatric conditions are highly polygenic and complex</li>
-								<li class="fragment">Overlapping symtpoms may not fully explain overlapping genetics</li>
+								<li class="fragment">Psychiatric conditions share symptoms and genetic profiles</li>
 								<li class="fragment">MRI studies show that structural and functional changes are widespread across the brain</li>
 								<li class="fragment b">Investigate distributed nature of genetic effects in the brain and its associations with psychiatric conditions</li>
 							</ul>
@@ -138,7 +138,7 @@
 						<div class="grid-wrapper">
 							<div class="header">
 								<div class="logo"></div>
-								<div class="section">Results IC</div>
+								<div class="section">Results (ICA decomposition)</div>
 							</div>
 							
 							<figure class="large-image">
@@ -175,9 +175,9 @@
 								<img src="files/LDSC_stats_matrix.png" class="large-image">
 							</figure>
 
-							<div class="fragment fade-up" style="position: absolute;background-color: white;bottom: 0;padding-bottom: 1vmin;margin-left: -2.5vmax;">
-								<figure class="two-column" style="display: flex;justify-content: center;align-items: flex-start;width: 100%;">
-									<img class="column" src="files/translpsych_screenshot.png" style="width: 65%;text-align: center;">
+							<div class="fragment fade-up" style="position: absolute;background-color: white;bottom: 0;padding-bottom: 1vmin;margin-left: -2.5vmax;min-width: 100vmax;">
+								<figure class="two-column" style="display: flex;justify-content: center;align-items: flex-start;">
+									<img class="column" src="files/translpsych_screenshot.png" style="width: 60%;text-align: center;">
 									<figure style="width: 25%;">
 										<a href="https://bit.ly/ica_genetics" target="_blank">
 											<img class="column" src="files/ica-genetics_qr.svg">
@@ -550,7 +550,7 @@
 								<tr><th colspan="2">Funding</th></tr>
 								<tr>
 									<td style="font-style: italic;">ERA-NET<br><img src="files/ERA_NET_NEURON_logo.png" style="width: 20vmax;"></td>
-									<td style="font-style: italic;"><img src="files/NFR_logo.svg" style="min-height: 7vmin;"></td>
+									<td style="font-style: italic;"><img src="files/NFR_logo.svg"></td>
 								</tr>
 							</table>
 
@@ -573,13 +573,17 @@
 						</div>
 
 						<div style="margin-top: 1em;font-style: italic;">Thanks to</div>
-						<div class="ackn" style="border: solid;border-radius: 50px;border-spacing: 0;width: 80%;margin: auto;">
+						<div class="ackn" style="border: solid;border-radius: 5vmin;border-spacing: 0;width: 80%;margin: auto;">
 							<div class="col_logo"><img src="files/ukb_logo.svg"></div>
 							<div class="col_logo"><img style="height: 10vmin;" src="files/tsd_logo.png">
 								<img src="files/sigma2_logo.png">
 							</div>
 							<div class="col_logo"><em>ERA-NET</em><img src="files/ERA_NET_NEURON_logo.png"></div>
-							<div class="col_logo"><img src="files/NFR_logo.svg"></div>
+							<div class="col_logo" style="text-align: left;line-height: 1.5vmin;">
+								<span style="color: #EBEBEB;font-size: 3vmin;font-weight: bold;line-height: 4vmin;">SYNSCHIZ</span><br>
+								<span style="color: #EBEBEB;font-size: 1.2vmin;">Linking synaptic dysfunction to disease mechanisms in schizophrenia</span>
+							</div>
+							<div class="col_logo"><img style="min-width: 1v5vmax;" src="files/NFR_logo.svg"></div>
 						</div>
 					</div>
 
