final synergy slides

--- a/2021-10-29-synergy-meeting/synergy-meeting-slides/index.html
+++ b/2021-10-29-synergy-meeting/synergy-meeting-slides/index.html
@@ -346,7 +346,7 @@
 				<section>
 
 					<!-- SUBSLIDE -->
-					<section>
+					<section data-visibility="hidden">
 						<div class="grid-wrapper">
 							<div class="header">
 								<div class="logo"></div>
@@ -398,8 +398,7 @@
 									<li class="fragment fade-down" data-fragment-index="1"><i class="fas fa-arrow-down" style="font-size: 5vmin;padding-bottom: 1em;"></i><br>
 										Gene set mapped from the significant loci in the GWAS</li>
 									<li class="fragment fade-down" data-fragment-index="2"><i class="fas fa-arrow-down" style="font-size: 5vmin;padding-bottom: 1em;"></i><br>
-										Compare identified genes to genes involved in synapses (e.g. BDNF, NRXN1 etc.)<sup>2</sup><br>
-										<i class="fas fa-arrow-down" style="font-size: 5vmin;padding-top: 1em;"></i></li>
+										Compare identified genes to genes involved in synapses (e.g. BDNF, NRXN1 etc.)<sup>2</sup><br></li>
 								</ul>
 							</div>
 
@@ -416,7 +415,7 @@
 					</section>
 
 					<!-- SUBSLIDE -->
-					<section>
+					<section data-visibility="hidden">
 						<div class="grid-wrapper">
 							<div class="header">
 								<div class="logo"></div>
