add phd day resources

--- a/2021-11-15-imaging-group-phd-day/imaging-group-phd-day_index.html
+++ b/2021-11-15-imaging-group-phd-day/imaging-group-phd-day_index.html
@@ -34,6 +34,10 @@
                         <td><i class="fab fa-js-square"></i></td>
                         <td>Slides for the presentation</td>
                     </tr>
+                    <tr class="newtab" data-href="./imaging-group-phd-day-resources/">
+                        <td><i class="fas fa-folder-open"></i></td>
+                        <td>Resources and assets for presentations</td>
+                    </tr>
                 </tbody>
             </table>
 
