--- a/index.html
+++ b/index.html
@@ -37,6 +37,7 @@
                         <td>15-11-2021</td>
                         <td>
                             <i class="fab fa-js-square"></i>
+                            <i class="fas fa-folder-open"></i>
                         </td>
                         <td>Imaging Group PhD Day</td>
                     </tr>
