update phd dayy resources links

--- a/2021-11-15-imaging-group-phd-day/imaging-group-phd-day_index.html
+++ b/2021-11-15-imaging-group-phd-day/imaging-group-phd-day_index.html
@@ -34,7 +34,7 @@
                         <td><i class="fab fa-js-square"></i></td>
                         <td>Slides for the presentation</td>
                     </tr>
-                    <tr class="newtab" data-href="./imaging-group-phd-day-resources/">
+                    <tr class="newtab" data-href="https://github.com/danielroelfs/slides/tree/main/2021-11-15-imaging-group-phd-day/imaging-group-phd-day-resources/">
                         <td><i class="fas fa-folder-open"></i></td>
                         <td>Resources and assets for presentations</td>
                     </tr>
