--- a/index.html
+++ b/index.html
@@ -99,6 +99,7 @@
                         <td>
                             <i class="fab fa-js-square"></i>
                             <i class="fab fa-html5"></i>
+                            <i class="far fa-image"></i>
                         </td>
                         <td>Early-Career Researchers Meeting 2020</td>
                     </tr>
@@ -140,6 +141,15 @@
                         <td>06-05-2019</td>
                         <td><i class="fas fa-file-powerpoint"></i></td>
                         <td>PhD plan presentation in Imaging meeting</td>
+                    </tr>
+                    <tr class="sametab" data-href="2021-11-26-ecrm21/ecrm21_index.html">
+                        <td>26-11-2021</td>
+                        <td>
+                            <i class="fab fa-js-square"></i>
+                            <i class="fab fa-html5"></i>
+                            <i class="far fa-file-pdf"></i>
+                        </td>
+                        <td>Early-Career Researchers Meeting 2021</td>
                     </tr>
                 </tbody>
             </table>
