relocate ecrm21 page to proper chronological place

--- a/2021-11-26-ecrm21/ecrm21_index.html
+++ b/2021-11-26-ecrm21/ecrm21_index.html
@@ -34,17 +34,13 @@
                         <td><i class="fab fa-js-square"></i></td>
                         <td>Slides for the introduction</td>
                     </tr>
-                    <tr class="newtab" data-href="./index.html">
-                        <td><i class="fab fa-html5"></i></td>
-                        <td>Homepage</td>
-                    </tr>
                     <tr class="newtab" data-href="./digital_program/digital_program.html">
                         <td><i class="fab fa-html5"></i></td>
                         <td>Digital program</td>
                     </tr>
                     <tr class="newtab" data-href="./analog_program/ecrm21_final_program.pdf">
                         <td><i class="far fa-file-pdf"></i></td>
-                        <td>Analog program in PDF format</td>
+                        <td>Analog program</td>
                     </tr>
                     <tr class="newtab" data-href="./break_slide/break_slide.html">
                         <td><i class="fab fa-html5"></i></td>
@@ -53,6 +49,10 @@
                     <tr class="newtab" data-href="./interactive_session/interactive_session.html">
                         <td><i class="fab fa-html5"></i></td>
                         <td>Instructions for the interactive session</td>
+                    </tr>
+                    <tr class="newtab" data-href="./index.html">
+                        <td><i class="fab fa-html5"></i></td>
+                        <td>Landing page for the different pages and files</td>
                     </tr>
                 </tbody>
             </table>
