--- a/2021-11-26-ecrm21/index.html
+++ b/2021-11-26-ecrm21/index.html
@@ -38,11 +38,11 @@
             </div>
 
             <div class="links-container">
-                <a class="square" href="digital_program/digital_program.html">
+                <a class="square" href="./digital_program/digital_program.html">
                     <h2>Digital program</h2>
                 </a>
 
-                <a class="square" href="analog_program/ecrm21_preliminary_schedule.pdf">
+                <a class="square" href="./analog_program/ecrm21_final_program.pdf">
                     <h2>Analog program</h2>
                 </a>
 
