fix typo in synergy

--- a/index.html
+++ b/index.html
@@ -33,6 +33,13 @@
                     </tr>
                 </thead>
                 <tbody>
+                    <tr class="sametab" data-href="2022-03-28-tubingen-meetup/tubingen-meetup_index.html">
+                        <td>28-03-2022</td>
+                        <td>
+                            <i class="fab fa-js-square"></i>
+                        </td>
+                        <td>Tübingen - Oslo Meet-up</td>
+                    </tr>
                     <tr class="sametab" data-href="2021-11-26-ecrm21/ecrm21_index.html">
                         <td>26-11-2021</td>
                         <td>
