--- a/2021-10-29-synergy-meeting/synergy-meeting-slides/index.html
+++ b/2021-10-29-synergy-meeting/synergy-meeting-slides/index.html
@@ -4,7 +4,7 @@
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
 
-		<title>NRSN Symposium Slides - Daniel Roelfs</title>
+		<title>Synergy Meeting Slides - Daniel Roelfs</title>
 
 		<link rel="stylesheet" href="dist/reset.css">
 		<link rel="stylesheet" href="dist/reveal.css">
