add phd club seminar

--- a/index.html
+++ b/index.html
@@ -33,6 +33,13 @@
                     </tr>
                 </thead>
                 <tbody>
+                    <tr class="sametab" data-href="2022-11-16-phd-club-seminar/phd-club-seminar_index.html">
+                        <td>16-11-2022</td>
+                        <td>
+                            <i class="fab fa-js-square"></i>
+                        </td>
+                        <td>Imaging Group PhD Club Seminar</td>
+                    </tr>
                     <tr class="sametab" data-href="2022-03-28-tubingen-meetup/tubingen-meetup_index.html">
                         <td>28-03-2022</td>
                         <td>
