add experiments script and update live coding script

--- a/2022-11-16-phd-club-seminar/phd-club-seminar_index.html
+++ b/2022-11-16-phd-club-seminar/phd-club-seminar_index.html
@@ -36,6 +36,14 @@
             <td><i class="fab fa-js-square"></i></td>
             <td>Slides for the presentation</td>
         </tr>
+        <tr class="newtab" data-href="./phd-club-seminar-slides/files/experiments.R">
+            <td><i class="fab fa-r-project"></i></td>
+            <td>R script containing some experiments</td>
+        </tr>
+        <tr class="newtab" data-href="./phd-club-seminar-slides/files/live_coding_script.R">
+            <td><i class="fab fa-r-project"></i></td>
+            <td>R script used during the question round for live coding</td>
+        </tr>
     </tbody>
 </table>
 
