--- a/index.html
+++ b/index.html
@@ -33,6 +33,13 @@
                     </tr>
                 </thead>
                 <tbody>
+                    <tr class="sametab" data-href="2023-10-26-psi-phd-seminar/psi-phd-seminar_index.html">
+                        <td>26-10-2023</td>
+                        <td>
+                            <i class="fab fa-js-square"></i>
+                        </td>
+                        <td>PSI PhD Seminar</td>
+                    </tr>
                     <tr class="sametab" data-href="2022-11-16-phd-club-seminar/phd-club-seminar_index.html">
                         <td>16-11-2022</td>
                         <td>
