update to final slides

--- a/2023-10-26-psi-phd-seminar/psi-phd-seminar-slides/index.html
+++ b/2023-10-26-psi-phd-seminar/psi-phd-seminar-slides/index.html
@@ -403,14 +403,14 @@ Daniel Roelfs
 </div>
 
 </section>
-<section class="slide level2">
-
-<div class="center-y" style="width: 70%; margin-left: 2vw">
-<p><em>“We’re planning on celebrating Oktoberfest at 26th October at PSI (HUP, Promenta, and hopefully Brainmint) but <strong>need to</strong> organize a seminar beforehand.”</em> <br><br> <strong>– Valerie</strong></p>
-</div>
-</section>
 <section id="the-plan" class="slide level2">
 <h2>The Plan</h2>
+<!--
+
+::: {.center-y style="width: 70%; margin-left: 2vw"}
+*"We're planning on celebrating Oktoberfest at 26th October at PSI (HUP, Promenta, and hopefully Brainmint) but **need to** organize a seminar beforehand."* <br><br> **-- Valerie**
+:::
+-->
 <div class="text-slide">
 <div class="fragment">
 <p><span style="color: navy;">C</span><span style="color: salmon;">o</span><span style="color: maroon;">l</span><span style="color: blue;">o</span><span style="color: indigo;">r</span><span style="color: orange;">s</span></p>
@@ -426,8 +426,8 @@ Daniel Roelfs
 </div>
 </div>
 </section>
-<section id="chapter-x" class="slide level2 chapter center">
-<h2>Chapter X</h2>
+<section id="chapter-1" class="slide level2 chapter center">
+<h2>Chapter 1</h2>
 <h3 id="picking-the-right-tool">Picking the right tool</h3>
 </section>
 <section class="slide level2">
@@ -447,9 +447,9 @@ Daniel Roelfs
 </div>
 </div>
 </section>
-<section id="chapter-x-1" class="slide level2 chapter center">
-<h2>Chapter X</h2>
-<h3 id="the-basics">The Basics</h3>
+<section id="chapter-2" class="slide level2 chapter center">
+<h2>Chapter 2</h2>
+<h3 id="colors">Colors</h3>
 </section>
 <section id="defaults-are-meh" class="slide level2">
 <h2>Defaults are meh</h2>
@@ -625,8 +625,8 @@ Daniel Roelfs
 <p><img data-src="./files/bob_ross_meme.png" alt="Bob Ross meme for plots"></p>
 </div>
 </section>
-<section id="chapter-x-2" class="slide level2 chapter center">
-<h2>Chapter X</h2>
+<section id="chapter-3" class="slide level2 chapter center">
+<h2>Chapter 3</h2>
 <h3 id="tricks-to-spice-up-your-plots">5 tricks to spice up your plots</h3>
 </section>
 <section id="custom-legend-keys" class="slide level2">
